--- a/.gitignore
+++ b/.gitignore
@@ -131,3 +131,12 @@ app.*.symbols
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
 !/dev/ci/**/Gemfile.lock
 !.vscode/settings.json
+
+
+## 
+android
+web
+macos
+linux
+ios
+build
