--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -1,8 +1,9 @@
 name: CI-Flutter-TODO-Miomi
 on:
   pull_request:
-    branches:
-      - main
+    push:
+      branches:
+        - main
 
 jobs:
   flutter_test:
