--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -1,23 +1,20 @@
 name: CI-Flutter-TODO-Miomi
 on:
+  push:
+    branches:
+      - main
   pull_request:
-    push:
       branches:
         - main
 
 jobs:
-  flutter_test:
+  build:
     name: Run flutter test and analyze
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-java@v1
-        with:
-          java-version: "12.x"
-      - uses: subosito/flutter-action@v1
+      - uses: actions/checkout@v3
         with:
           channel: "stable"
-
       - run: flutter pub get
       - run: flutter analyze
       - run: flutter test
