--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -13,9 +13,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: subosito/flutter-action@v2
+      - uses: actions/setup-java@v3
         with:
           channel: "stable"
+
+      - uses: subosito/flutter-action@v2
+
       - run: flutter pub get
-      - run: flutter analyze
-      - run: flutter test
+      - run: flutter build appbundle
