--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -8,7 +8,7 @@ on:
         - main
 
 jobs:
-  build:
+  build-and-test:
     name: Run flutter test and analyze
     runs-on: ubuntu-latest
     steps:
