--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -12,9 +12,13 @@ jobs:
     name: Run flutter test and analyze
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout code
       - uses: actions/checkout@v3
-      - uses: subosito/flutter-action@v2
+      - name: Install Flutter
+      - uses: subosito/flutter-action@v3
         with:
           channel: "stable"
+      - name: Get dependencies
       - run: flutter pub get
+      - name: Run tests
       - run: flutter build appbundle
