--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -11,14 +11,9 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
       - uses: actions/checkout@v3
-
-      - name: Install Flutter
       - uses: subosito/flutter-action@v2
         with:
-          channel: "stable"
-      - name: Get dependencies
+          channel: 'stable'
       - run: flutter pub get
-      - name: Run tests
       - run:  flutter test
