test insertar datos en db

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,6 @@ dependencies:
     sdk: flutter
   get_it: ^7.2.0
   lottie: ^2.3.2
-  mockito: ^5.4.0
   path: ^1.8.2
   provider: ^6.0.5
   sqflite: ^2.2.6
@@ -24,6 +23,9 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
+  mockito: ^5.4.0
+  build_runner: ^2.3.3
+  sqflite_common_ffi: any
 
 flutter:
 
